--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,12 @@
     ],
     "homepage": "https://github.com/wimski/nominatim-geocoding-api-client",
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "myclabs/php-enum": "^1.8",
+        "php-http/discovery": "^1.13",
+        "psr/http-client": "^1.0",
+        "psr/http-factory": "^1.0"
     },
-    "require-dev": {},
     "autoload": {
         "psr-4": {
             "Wimski\\Nominatim\\": "src/"
