--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0"
     },
+    "require-dev": {
+        "phpstan/phpstan": "^1.4"
+    },
     "autoload": {
         "psr-4": {
             "Wimski\\Nominatim\\": "src/"
@@ -40,5 +43,8 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "scripts": {
+        "analyze": "@php vendor/phpstan/phpstan/phpstan analyse --memory-limit 1G"
+    }
 }
