--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,11 @@
         "psr/http-factory": "^1.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.4"
+        "mockery/mockery": "^1.5",
+        "phpstan/phpstan": "^1.4",
+        "phpstan/phpstan-mockery": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
@@ -45,6 +49,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "analyze": "@php vendor/phpstan/phpstan/phpstan analyse --memory-limit 1G"
+        "phpstan": "@php vendor/phpstan/phpstan/phpstan analyse --memory-limit 1G",
+        "phpunit": "@php vendor/phpunit/phpunit/phpunit --no-coverage",
+        "coverage": "@php vendor/phpunit/phpunit/phpunit"
     }
 }
