--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,3 +1,8 @@
+includes:
+    - vendor/phpstan/phpstan-mockery/extension.neon
+    - vendor/phpstan/phpstan-phpunit/extension.neon
+    - vendor/phpstan/phpstan-phpunit/rules.neon
+
 parameters:
   level: max
   paths:
