--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -35,4 +35,4 @@ jobs:
               run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
             - name: Execute static code analysis
-              run: composer analyze
+              run: composer phpstan
