--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -39,4 +39,4 @@ jobs:
               run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
             - name: Execute tests
-              run: composer test
+              run: composer phpunit
