--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,12 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
+        "nyholm/psr7": "^1.5",
         "phpstan/phpstan": "^1.4",
         "phpstan/phpstan-mockery": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "swisnl/php-http-fixture-client": "^3.0"
     },
     "autoload": {
         "psr-4": {
